create : activity create headline with xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.HeadlineNewsMaker"
         tools:targetApi="31">
         <activity
+            android:name=".view.headline.CreateHeadlineActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.preview.PreviewActivity"
             android:exported="false" />
         <activity
