--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         tools:targetApi="31">
         <activity
             android:name=".view.template.TemplateActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".view.headline.CreateHeadlineActivity"
             android:exported="false"
