--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_logo_hnm"
+        android:icon="@mipmap/ic_logo_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_logo_hnm_round"
+        android:roundIcon="@mipmap/ic_logo_app_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
@@ -57,15 +57,19 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
+        </activity>
+        <activity
+            android:name=".view.main.MainActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".view.main.MainActivity"
-            android:exported="true" />
         <provider
             android:name=".common.CoreFileProvider"
             android:authorities="${applicationId}.provider"
